# cmake_stm32_template

./: .editorconfig  .env.ci  .env.ci.md  .env.local  .gitignore  BUILD_SYSTEM_GUIDE.md  CMakeLists.txt  CMakeLists_portable.txt  DEBUG_QUICKSTART.md  DEBUG_SETUP.md  GOOGLE_TEST_ANALYSIS.md  PORTABILITY.md  PORTABLE_ARCHITECTURE_GUIDE.md  README.md  TESTING_SUCCESS.md  build_portable.sh  debug_firmware.sh  flash_firmware.sh  run_tests.sh  sonar-project.properties  version.h.in
.github/workflows/: ci.yml  sonarqube.yml
build-stm32l432kc-debug/: cmake_install.cmake  version.h
build-stm32l432kc-debug/src/: cmake_install.cmake
cmake/: GenerateVersionHeader.cmake  arm-gcc-toolchain.cmake  cmsis_headers.cmake  freertos_sources.cmake  googletest.cmake  hal_sources.cmake
cmake/targets/: stm32f407vg.cmake  stm32l432kc.cmake
scripts/: README_SONAR.md  install_sonar_tools.sh  quick_sonar_check.sh  setup_sonar_ci.sh  sonar_analysis.sh
src/: CMakeLists.txt  syscalls.c
src/app/: FreeRTOSConfig.h  freertos_stm32l4xx_it.c  main.cpp  portable_led_example.cpp
src/bsp/common/: bsp.h
src/bsp/stm32f4xx/: bsp_stm32f407vg.cpp
src/bsp/stm32l4xx/: bsp_stm32l432kc.cpp
src/hal/interfaces/: hal_gpio.h  hal_rcc.h
src/hal/stm32l4xx/: hal_gpio_stm32l4xx.c
tests/: CMakeLists.txt  CMakeLists_old.txt  CMakeLists_old2.txt  CMakeLists_simple.txt  CMakeLists_standalone.txt  README.md
tests/fixtures/: led_controller.cpp  led_controller.h  main_functions.cpp  main_functions.h  real_led_controller.cpp  real_led_controller.h  stm32_memory_mock.cpp  stm32_memory_mock.h  stm32_test_fixture.h  stm32l4xx_hal.cpp  stm32l4xx_hal.h  stm32l4xx_hal_rcc_mock.h
tests/mocks/: mock_freertos.cpp  mock_freertos.h  mock_hal.cpp  mock_hal.h
tests/unit/: test_hal_mocking.cpp  test_led_controller.cpp  test_main_functions.cpp  test_real_led_controller.cpp  test_smoke.cpp
